[gd_scene load_steps=2 format=3 uid="uid://cjvy6h27p17px"]

[ext_resource type="Script" uid="uid://cvi2k7qg0lk08" path="res://scripts/managers/BridgeBuilder.gd" id="1_41ph0"]

[node name="BridgeBuilder" type="Node2D"]
script = ExtResource("1_41ph0")

[node name="PreviewLine" type="Line2D" parent="."]
z_index = 1
width = 5.0
default_color = Color(0.4, 0.5, 1, 0.5)

[node name="BuildTimer" type="Timer" parent="."]

[node name="CostLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 6
